--- a/.env
+++ b/.env
@@ -7,10 +7,10 @@ STORAGE_TYPE="json"
 # No additional setup required!
 
 # MySQL Configuration (if using MySQL)
-DB_HOST="localhost"
-DB_USER="root"
-DB_PASSWORD=""
-DB_NAME="fileflowpro"
+# DB_HOST="localhost"
+# DB_USER="root"
+# DB_PASSWORD=""
+# DB_NAME="fileflowpro"
 
 # PostgreSQL Configuration (if using postgres)
 # For local PostgreSQL (if you have it installed):
@@ -21,7 +21,7 @@ DB_NAME="fileflowpro"
 # 2. Create a free account
 # 3. Create a new project
 # 4. Copy the connection string and replace the placeholder below
-DATABASE_URL="postgresql://your-neon-connection-string-here"
+# DATABASE_URL="postgresql://neondb_owner:xxxxxxxxxxxx@ep-cool-mode-a5m8w3z2.us-east-2.aws.neon.tech/neondb?sslmode=require"
 
 # JWT Secret
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
